--- a/notebooks/2-representation.ipynb
+++ b/notebooks/2-representation.ipynb
@@ -2,15 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from langdetect import detect  # For language detection\n",
+    "\n",
+    "from transformers import BertTokenizer\n",
+    "\n",
+    "# Instantiating the BERT tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "\n",
+    "def preprocess_text(text, max_length):\n",
+    "    tokenized = tokenizer.encode_plus(text, max_length=max_length, padding='max_length', truncation=True, return_tensors='pt')\n",
+    "    return tokenized['input_ids'], tokenized['attention_mask']"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "firstEnv",
+   "language": "python",
+   "name": "firstenv"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
